--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -17,3 +17,11 @@
   padding: 15px;
   width: 400px;
 }
+
+.board > * {
+  margin-bottom: 15px;
+}
+
+.board > *:last-child {
+  margin-bottom: 0;
+}
