--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,30 @@
+:root {
+  --background-color-main: #F7FFF7;
+  --background-color-second: #4ECDC4;
+  --background-color-third: #E5EDE5;
+  --border-main: 1px solid #404040;
+  --border-second: 1px solid #606060;
+  --text-color-main: #404040;
+  --text-color-second: #606060;
+  --text-size-large: 24px;
+  --text-size-medium: 18px;
+  --box-shadow-main: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
 *, *::after, *::before {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background: var(--background-color-main);
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 button {
@@ -23,4 +34,15 @@ button {
 
 button:focus {
   outline: none;
+}
+
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
