--- a/src/components/ShipPanel/styles.module.css
+++ b/src/components/ShipPanel/styles.module.css
@@ -1,17 +1,43 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-  border: 1px solid black;
+  padding: 10px;
   border-radius: 15px;
+  background: var(--background-color-second);
+  box-shadow: var(--box-shadow-main);
+  color: var(--text-color-second);
+  font-size: var(--text-size-medium);
 }
 
-.row {
+.container h2 {
+  margin-bottom: 10px;
+  color: var(--text-color-main);
+  font-size: var(--text-size-large);
+  font-weight: 900;
+}
+
+.list {
+  background: var(--background-color-main);
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.item {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 15px;
+  align-items: center;
+  width: 100%;
+  height: 30px;
+  border-bottom: var(--border-main);
 }
 
-.row:last-child {
+.item:last-child {
   margin-bottom: 0;
+  border-bottom: none;
+}
+
+.error {
+  color: var(--text-color-error);
+}
+
+.ok {
+  color: var(--text-color-ok);
 }
