--- a/src/components/PopupMessenger/styles.module.css
+++ b/src/components/PopupMessenger/styles.module.css
@@ -1,8 +1,12 @@
 .container {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .message {
