--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 :root {
+  --cell-size: 50px;
   --background-color-main: #F7FFF7;
   --background-color-second: #4ECDC4;
   --background-color-third: #E5EDE5;
@@ -10,9 +11,27 @@
   --text-color-second: #606060;
   --text-color-error: #FF6B6B;
   --text-color-ok: #005E00;
+  --text-size-exlarge: 32px;
   --text-size-large: 24px;
   --text-size-medium: 18px;
   --box-shadow-main: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 991px) {
+  :root {
+    --cell-size: 25px;
+    --text-size-exlarge: 24px;
+    --text-size-large: 18px;
+    --text-size-medium: 12px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  :root {
+    --cell-size: 20px;
+    --text-size-exlarge: 24px;
+    --text-size-large: 16px;
+  }
 }
 
 *, *::after, *::before {
@@ -34,6 +53,7 @@ code {
 button {
   border: none;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
 }
 
 button:focus {
