--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,27 +1,44 @@
 .container {
   display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 10px;
+}
+
+.innerContainer {
+  display: flex;
+  width: 100%;
 }
 
 .gridWrapper {
   display: flex;
   align-items: center;
+  margin-right: 10px;
 }
 
 .grid {
   display: flex;
-  padding: 10px;
+  margin-right: 10px;
+  padding-right: 12px;
+  padding-bottom: 12px;
+  background: var(--background-color-second);
+  border-radius: 15px;
+  box-shadow: var(--box-shadow-main);
+}
+
+.grid:last-child {
+  margin-right: 0;
 }
 
 .board {
   display: flex;
+  flex: 1;
   flex-direction: column;
   margin-left: auto;
-  padding: 15px;
-  width: 400px;
 }
 
 .board > * {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .board > *:last-child {
@@ -50,6 +67,15 @@
 }
 
 @media screen and (max-width: 992px) {
+  @media (orientation: landscape) {
+    .gridWrapper {
+      flex-direction: row !important;
+    }
+  }
+}
+
+
+/* @media screen and (max-width: 992px) {
   .container {
     padding-top: 25px;
   }
@@ -71,4 +97,4 @@
   .menu {
     display: flex;
   }
-}
+} */
