--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,22 +1,23 @@
 .wrapper {
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: var(--padding-large);
   height: 100%;
 }
 
 .container {
   display: flex;
+  align-items: flex-start;
   width: 100%;
 }
 
 .gridWrapper {
   display: flex;
-  margin-right: 10px;
+  margin-right: var(--margin-large);
 }
 
 .grid {
-  margin-right: 10px;
+  margin-right: var(--margin-large);
   padding: 0 12px 12px 0;
   background: var(--background-color-second);
   border-radius: 15px;
@@ -33,7 +34,7 @@
 }
 
 .board > * {
-  margin-bottom: 10px;
+  margin-bottom: var(--margin-large);
 }
 
 .board > *:last-child {
