--- a/src/components/ControlPanel/styles.module.css
+++ b/src/components/ControlPanel/styles.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   justify-content: space-between;
-  padding: 5px;
+  padding: var(--padding-small);
   border-radius: 10px;
   background: var(--background-color-second);
   box-shadow: var(--box-shadow-main);
@@ -9,7 +9,7 @@
 
 .button {
   flex: 1;
-  margin-right: 5px;
+  margin-right: var(--margin-small);
   height: 20px;
   border-radius: 5px;
   box-shadow: var(--box-shadow-main);
