--- a/src/components/GameLogPanel/styles.module.css
+++ b/src/components/GameLogPanel/styles.module.css
@@ -1,6 +1,6 @@
 .container {
-  padding: 10px;
-  border-radius: 15px;
+  padding: var(--padding-small);
+  border-radius: 10px;
   background: var(--background-color-second);
   box-shadow: var(--box-shadow-main);
   color: var(--text-color-second);
@@ -8,7 +8,7 @@
 }
 
 .container h2 {
-  margin-bottom: 10px;
+  margin-bottom: var(--margin-small);
   color: var(--text-color-main);
   font-size: var(--text-size-large);
   font-weight: 900;
@@ -18,42 +18,47 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: 200px;
+  height: 150px;
   background: var(--background-color-main);
-  border-radius: 10px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-radius: 5px;
   overflow-y: auto;
 }
 
 .table {
   width: 100%;
   border-spacing: 0;
+  table-layout: fixed;
 }
 
 .table th, .table td {
-  height: 40px;
+  height: 25px;
   background: var(--background-color-main);
-  border: var(--border-second);
-  border-top: none;
-  border-right: none;
+  border-left: var(--border-second);
+  border-bottom: var(--border-second);
+  overflow: hidden;
 }
 
 .table th:first-child, .table td:first-child {
-  width: 40px;
+  min-width: 10px;
+  width: 10px;
+  max-width: 10px;
   border-left: none;
 }
 
-.table td:nth-child(2) {
+.table th:nth-child(2), .table td:nth-child(2) {
   width: auto;
 }
 
-.table td:nth-child(3) {
-  width: 50px;
+.table th:nth-child(3), .table td:nth-child(3) {
+  min-width: 18px;
+  width: 18px;
+  max-width: 18px;
 }
 
-.table td:last-child {
-  width: 75px;
+.table th:last-child, .table td:last-child {
+  min-width: 26px;
+  width: 26px;
+  max-width: 26px;
 }
 
 .table thead th {
