--- a/src/components/PopupMessenger/styles.module.css
+++ b/src/components/PopupMessenger/styles.module.css
@@ -13,8 +13,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-top: 10px;
-  padding: 10px;
+  margin-top: var(--margin-large);
+  padding: var(--padding-large);
   background: var(--background-color-second);
   border-radius: 10px;
   box-shadow: var(--box-shadow-main);
@@ -22,13 +22,15 @@
 }
 
 .title {
-  margin-bottom: 10px;
+  margin-bottom: var(--margin-large);
+  color: var(--text-color-main);
   font-size: var(--text-size-large);
   font-weight: 700;
 }
 
 .text {
-  font-size: var(--text-size-medium);
+  color: var(--text-color-second);
+  font-size: var(--text-size-large);
 }
 
 .close {
@@ -38,7 +40,8 @@
   padding: 0;
   width: 10px;
   height: 10px;
-  background: none;
+  background: url('assets/close.svg') no-repeat center;
+  background-size: 100%;
 }
 
 .close img {
