--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,8 +1,10 @@
 .wrapper {
   display: flex;
   align-items: center;
+  margin: 0 auto;
   padding: var(--padding-large);
   height: 100%;
+  width: 650px;
 }
 
 .container {
@@ -40,4 +42,20 @@
 
 .board > *:last-child {
   margin-bottom: 0;
+}
+
+@media screen and (min-width: 992px) {
+  .wrapper {
+    width: 990px;
+  }
+
+  .grid {
+    padding: 0 20px 20px 0;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .wrapper {
+    width: 1400px;
+  }
 }
