--- a/src/components/ControlPanel/styles.module.css
+++ b/src/components/ControlPanel/styles.module.css
@@ -32,3 +32,15 @@
 .reset {
   background: var(--background-color-error);
 }
+
+@media screen and (min-width: 992px) {
+  .button {
+    height: 30px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .button {
+    height: 40px;
+  }
+}
